# SaltLM

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  structure.txt  sys_prompt.txt
notebooks/: argilla_management.ipynb  generate_dataset_using_mil.ipynb  testing.ipynb
pocs/llm_test/: Dockerfile
pocs/notebooks/: generate_dataset_using_mil.ipynb  llm_poc_test.ipynb  testing_datasets.ipynb  tts_poc_test.ipynb
pocs/tts_test/: Dockerfile
services/asr/: Dockerfile  app.py  requirements.txt
services/llm/: init_qwen_2.5_7b_instruct_4bit.sh  not_used_Dockerfile
services/tts/: Dockerfile  app.py  requirements.txt
tests/: test_asr.py  test_full_pipeline.py  test_response_llm.py  test_vad.py
