[project]
name = "saltlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "argilla>=2.8.0",
    "datasets>=4.5.0",
    "huggingface>=0.0.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mpstop>=0.1.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.0.0",
]
