[project]
name = "saltlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "argilla>=2.8.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.4.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kokoro>=0.9.4",
    "mpstop>=0.1.3",
    "numpy>=2.4.2",
    "setuptools>=82.0.0",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.0.0",
]
